--- a/P-Tracker2/P-Tracker2/MainWindow.xaml
+++ b/P-Tracker2/P-Tracker2/MainWindow.xaml
@@ -1,9 +1,10 @@
 ﻿<Window x:Class="P_Tracker2.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="UKI v1.0" Height="229" Width="216" Icon="/P_Tracker2;component/img/iconP.png" Closed="Window_Closed">
+        Title="UKI v1.0" Height="228" Width="205" Icon="/P_Tracker2;component/img/iconP.png" Closed="Window_Closed">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="1*" />
             <RowDefinition Height="1*" />
             <RowDefinition Height="1*" />
             <RowDefinition Height="1*" />
@@ -51,7 +52,15 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Name="button4" Grid.Row="5" Content="Other Menu" FontSize="16" Foreground="#FFFFFF20" Click="button4_Click">
+        <Button Name="butSkel" Grid.Row="5" Content="Skel Viewer" FontSize="16" Foreground="#FFFFFF20" Click="butSkel_Click">
+            <Button.Background>
+                <LinearGradientBrush>
+                    <GradientStop Color="DarkCyan" Offset="0" />
+                    <GradientStop Color="DarkBlue" Offset="1" />
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <Button Name="button4" Grid.Row="6" Content="Other Menu" FontSize="16" Foreground="#FFFFFF20" Click="button4_Click">
             <Button.Background>
                 <LinearGradientBrush>
                     <GradientStop Color="DarkCyan" Offset="0" />
