--- a/P-Tracker2/P-Tracker2/OtherMenu.xaml
+++ b/P-Tracker2/P-Tracker2/OtherMenu.xaml
@@ -1,9 +1,10 @@
 ﻿<Window x:Class="P_Tracker2.OtherMenu"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="P-Tracker" Height="192" Width="171" Icon="/P_Tracker2;component/img/iconP.png" Closed="Window_Closed">
+        Title="P-Tracker" Height="208" Width="166" Icon="/P_Tracker2;component/img/iconP.png" Closed="Window_Closed">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="1*" />
             <RowDefinition Height="1*" />
             <RowDefinition Height="1*" />
             <RowDefinition Height="1*" />
@@ -42,7 +43,15 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Name="butMapEditor" Grid.Row="4" Content="MAP Editor" FontSize="16" Foreground="#FFFFFF20" Click="butMapEditor_Click">
+        <Button Name="butConverter" Grid.Row="4" Content="Converter" FontSize="16" Foreground="#FFFFFF20" Click="butConverter_Click">
+            <Button.Background>
+                <LinearGradientBrush>
+                    <GradientStop Color="#FF00CA8B" Offset="0" />
+                    <GradientStop Color="#FF00628B" Offset="1" />
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <Button Name="butMapEditor" Grid.Row="5" Content="MAP Editor" FontSize="16" Foreground="#FFFFFF20" Click="butMapEditor_Click">
             <Button.Background>
                 <LinearGradientBrush>
                     <GradientStop Color="#FF00CA8B" Offset="0" />
