--- a/P-Tracker2/P-Tracker2/Viewer/TotalViewer.xaml
+++ b/P-Tracker2/P-Tracker2/Viewer/TotalViewer.xaml
@@ -89,7 +89,7 @@
                     <Button Content="RAW?" Height="21" HorizontalAlignment="Left" Name="butUKI_rawSample" VerticalAlignment="Top" Width="61" Click="butUKI_rawSample_Click" Margin="6,37,0,0" />
                     <GroupBox Header="Entropy" Height="67" HorizontalAlignment="Left" Margin="201,-3,0,0" Name="groupBox8" VerticalAlignment="Top" Width="260" Foreground="#FFA3FFA3">
                         <Grid>
-                            <TextBox Height="23" HorizontalAlignment="Left" Margin="41,2,0,0" Name="txtUKI_keyID" VerticalAlignment="Top" Width="36" Text="0,0" />
+                            <TextBox Height="23" HorizontalAlignment="Left" Margin="41,2,0,0" Name="txtUKI_keyID" VerticalAlignment="Top" Width="36" Text="0,1_2,3" />
                             <Label Content="KeyID" Height="28" HorizontalAlignment="Left" Name="label2" VerticalAlignment="Top" Foreground="White" />
                             <CheckBox Content="Angle" Foreground="#FF61FFFF" Height="16" HorizontalAlignment="Left" IsChecked="True" Margin="142,2,0,0" Name="checkUKI_E_Angle" VerticalAlignment="Top" />
                             <CheckBox Content="X,Y,Z" Foreground="#FF61FFFF" Height="16" HorizontalAlignment="Left" IsChecked="True" Margin="86,2,0,0" Name="checkUKI_E_XYZ" VerticalAlignment="Top" />
